--- a/WebFlow/WebFlow.csproj
+++ b/WebFlow/WebFlow.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
 		
@@ -13,6 +13,11 @@
 		<Title>WebFlow</Title>
 		<Authors>WebWorks</Authors>
 		<Description>A SDK for ASP.NET made to make development faster and easier.</Description>
+		<PackageProjectUrl>https://github.com/WebWorks-Dev/WebFlow</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/WebWorks-Dev/WebFlow</RepositoryUrl>
+		<RepositoryType>GitHub</RepositoryType>
+		<PackageIcon>image0.jpg</PackageIcon>
+		<PackageTags>Asp.Net, C#, NET6.0</PackageTags>
     </PropertyGroup>
 
     <ItemGroup>
@@ -44,6 +49,13 @@
       <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.5.0" />
       <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="image0.jpg">
+        <Pack>True</Pack>
+        <PackagePath></PackagePath>
+      </None>
     </ItemGroup>
 
 </Project>
