Add ReCaptcha attribute and enhance password handling
This update introduces a ReCaptcha attribute for added security in form submissions. Some minor changes include the addition of a missing method in the GenericCacheService.

--- a/WebFlow/WebFlow.csproj
+++ b/WebFlow/WebFlow.csproj
@@ -17,10 +17,9 @@
 		<RepositoryUrl>https://github.com/WebWorks-Dev/WebFlow</RepositoryUrl>
 		<RepositoryType>GitHub</RepositoryType>
 		<PackageIcon>image0.jpg</PackageIcon>
-		<PackageTags>Asp.Net, C#, NET6.0</PackageTags>
-		<Version>1.1.0</Version>
-		<PackageReleaseNotes>Added documentation for IEmailService and IPasswordHashService, added password resets, added account email validation (codes)
-</PackageReleaseNotes>
+		<PackageTags>Asp.Net, C#, NET6.0, Recaptcha, Authentication, Authorization</PackageTags>
+		<Version>1.2.0</Version>
+		<PackageReleaseNotes>Added missing method in GenericCacheService, added Recaptcha attribute</PackageReleaseNotes>
     </PropertyGroup>
 
     <ItemGroup>
