Fixes within caching and authorization

--- a/WebFlow/WebFlow.csproj
+++ b/WebFlow/WebFlow.csproj
@@ -30,6 +30,7 @@
     <ItemGroup>
       <PackageReference Include="BCrypt.Net" Version="0.1.0" />
       <PackageReference Include="MailKit" Version="4.2.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.26" />
       <PackageReference Include="Microsoft.CodeAnalysis" Version="4.7.0" />
       <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.7.0" />
       <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.7.0" />
